Change the name of template-child

--- a/wp-content/themes/virtue-child/style.css
+++ b/wp-content/themes/virtue-child/style.css
@@ -2,7 +2,7 @@
  Theme Name:   Virtue
  Theme URI:    http://kadencethemes.com/product/virtue-free-theme/
  Description:  Virtue Theme
- Template:     virtue
+ Template:     virtue-child
  Version:      1.0.0
  Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
  Text Domain:  virtue
@@ -12,3 +12,4 @@
 
 /* =Theme customization starts here
 -------------------------------------------------------------- */
+
