Correct Theme name

--- a/wp-content/themes/virtue-child/style.css
+++ b/wp-content/themes/virtue-child/style.css
@@ -1,5 +1,5 @@
 /*
- Theme Name:   Virtue
+ Theme Name:   Virtue-child
  Theme URI:    http://kadencethemes.com/product/virtue-free-theme/
  Description:  Virtue Theme
  Template:     virtue-child
