h3 title color =white (widgets.title)

--- a/wp-content/themes/virtue-child/style.css
+++ b/wp-content/themes/virtue-child/style.css
@@ -12,4 +12,7 @@
 
 /* =Theme customization starts here
 -------------------------------------------------------------- */
-
+#containerfooter h3 title {
+ color:#FFF;
+  
+}
