white title at widget

--- a/wp-content/themes/virtue-child/style.css
+++ b/wp-content/themes/virtue-child/style.css
@@ -12,7 +12,4 @@
 
 /* =Theme customization starts here
 -------------------------------------------------------------- */
-#containerfooter h3 title {
- color:#FFF;
-  
-}
+#containerfooter h3, #containerfooter {color:#FFF;}
